--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,53 @@ css
 
 #modal-container.is-visible {
   /* CSS for modal container - add your own desired CSS styles here */
-  background: #b8dde9;
-  display: block;
+  background: #96bda4;
+  position: center;
+  text-transform:uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+    
+  /* to show it above other content */
+  z-index: 999; 
+  
+  /* to allow scrolling if the screen is not high enough*/
+  overflow: auto; 
+    
+  /* this is used to center the modal */
+  display: grid;
+  text-align: center;
 }
+
+ul.pokemon-list {
+  list-style-type: none;
+  display: grid;
+  text-align: center;
+  background-color: lightslategrey;
+  text-transform: uppercase;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+  padding: 20px;
+}
+
+.button-class {
+  padding: 12px 40px;
+  border-radius: 12px;
+  width: 50%;
+  font-family: 'New Tegomin', serif;;
+  text-transform:uppercase;
+  font-size: medium;
+  font-weight: bold;
+  margin: auto;
+}
+
+body {
+  font-family: 'New Tegomin', serif;;
+  text-transform:uppercase;
+}
+
+p {
+  font-weight: bold;
+}
+
