--- a/css/styles.css
+++ b/css/styles.css
@@ -1,26 +1,29 @@
-css
 #modal-container {
-  display: none;
-}
-
-#modal-container.is-visible {
-  /* CSS for modal container - add your own desired CSS styles here */
-  background: #96bda4;
-  position: center;
-  text-transform:uppercase;
-  margin-left: auto;
-  margin-right: auto;
-  width: 100%;
-    
-  /* to show it above other content */
-  z-index: 999; 
-  
-  /* to allow scrolling if the screen is not high enough*/
-  overflow: auto; 
-    
-  /* this is used to center the modal */
-  display: grid;
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   text-align: center;
+  text-transform: uppercase;
+}
+.modal {
+  width: 500px;
+  background-color: #ccc;
+  margin: 0 auto;
+  height: auto;
+}
+#modal-container.is-visible {   
+  /* this is used to center the modal */
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
 }
 
 ul.pokemon-list {
