--- a/css/styles.css
+++ b/css/styles.css
@@ -14,7 +14,7 @@
 }
 .modal {
   width: 500px;
-  background-color: #ccc;
+  background-color: rgb(190, 207, 200);
   margin: 0 auto;
   height: auto;
 }
