--- a/css/styles.css
+++ b/css/styles.css
@@ -1,14 +1,14 @@
-#modal-container {
-  display: none; /* Hidden by default */
-  position: fixed; /* Stay in place */
-  z-index: 1; /* Sit on top */
+/* #modal-container {
+  display: none; 
+  position: fixed; 
+  z-index: 1; 
   left: 0;
   top: 0;
-  width: 100%; /* Full width */
-  height: 100%; /* Full height */
-  overflow: auto; /* Enable scroll if needed */
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgb(0,0,0); 
+  background-color: rgba(0,0,0,0.4); 
   text-align: center;
   text-transform: uppercase;
 }
@@ -19,12 +19,11 @@
   height: auto;
 }
 #modal-container.is-visible {   
-  /* this is used to center the modal */
   display: flex;
   align-items: center;
   justify-content: center;
 
-}
+}  */
 
 ul.pokemon-list {
   list-style-type: none;
