--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ ul.pokemon-list {
   list-style-type: none;
   display: grid;
   text-align: center;
-  background-color: lightslategrey;
+  background-color: rgb(119, 136, 153);
   text-transform: uppercase;
   margin-left: auto;
   margin-right: auto;
