--- a/css/styles.css
+++ b/css/styles.css
@@ -1,30 +1,3 @@
-/* #modal-container {
-  display: none; 
-  position: fixed; 
-  z-index: 1; 
-  left: 0;
-  top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
-  background-color: rgb(0,0,0); 
-  background-color: rgba(0,0,0,0.4); 
-  text-align: center;
-  text-transform: uppercase;
-}
-.modal {
-  width: 500px;
-  background-color: rgb(190, 207, 200);
-  margin: 0 auto;
-  height: auto;
-}
-#modal-container.is-visible {   
-  display: flex;
-  align-items: center;
-  justify-content: center;
-
-}  */
-
 ul.pokemon-list {
   list-style-type: none;
   display: grid;
@@ -36,6 +9,19 @@ ul.pokemon-list {
   width: 75%;
   padding: 20px;
 }
+
+/* Would like to animate the image added, having trouble remembering how to call it correctly */
+/* img.gotta-catch-em-all {
+  animation: moveHorizontal 2s ease infinite alternate;
+    animation-duration: 2s;
+    animation-timing-function: ease;
+    animation-delay: 0s;
+    animation-iteration-count: infinite;
+    animation-direction: alternate;
+    animation-fill-mode: none;
+    animation-play-state: running;
+    animation-name: moveHorizontal;
+} */
 
 .button-class {
   padding: 12px 40px;
