update navbar/try to make fluid

--- a/css/styles.css
+++ b/css/styles.css
@@ -36,6 +36,14 @@ ul.pokemon-list {
   animation-fill-mode: both;
 }
 
+/*Have tried the below several different ways with calling the text/trying to change it's appearance. 
+When I had placed the text in a heading, it was white but was below the image */
+.navbar-text {
+  position: relative;
+  color: white;
+  width: 50%;
+}
+
 .modal-body {
   text-align: center;
 }
